--- a/src/app/pages/interview-schedule/interview-schedule-start/interview-schedule-start.component.html
+++ b/src/app/pages/interview-schedule/interview-schedule-start/interview-schedule-start.component.html
@@ -49,7 +49,7 @@
         <div class="col-sm-12">
           <div class="form-group">
             <label for="weight">Mark</label>
-            <select id="weight" class="form-control" formControlName="weight">
+            <select id="weight" class="form-control" formControlName="mark">
               <option *ngFor="let weight of weights" [value]="weight">{{ weight }}</option>
             </select>
           </div>
