--- a/src/app/pages/pre-interview-form/pre-interview-add/pre-interview-add.component.html
+++ b/src/app/pages/pre-interview-form/pre-interview-add/pre-interview-add.component.html
@@ -6,8 +6,8 @@
         <div class="col-sm-6">
           <div class="form-group">
             <div class="form-group">
-              <label for="name">Enter yor full name</label>
-              <input class="form-control" id="name" placeholder="Name" formControlName="applicantName" type="text">
+              <label for="name">Enter your full name</label>
+              <input class="form-control" id="name" placeholder="Name" readonly formControlName="applicantName" type="text">
             </div>
           </div>
         </div>
